fix filters spacing

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -72,7 +72,8 @@ body {
 }
 
 .filters {
-  margin: 10px 0;
+  margin-top: 6px;
+  margin-bottom: 10px;
 }
 
 .select-label {
